<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.shana.filedemo.MainActivity">
    <Button
        android:id="@+id/phone_dicectory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/phone_dicectory"
        android:onClick="doClick"
        />
    <Button
        android:id="@+id/external_storage_public_directory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/external_storage_public_directory"
        android:onClick="doClick"
        />
    <Button
        android:id="@+id/external_storage_directory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/external_storage_directory"
        android:onClick="doClick"
        />
    <Button
        android:id="@+id/data_storage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/data_storage"
        android:onClick="doClick"
        />
    <Button
        android:id="@+id/download_cache_directory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/download_cache_directoyu"
        android:onClick="doClick"
        />
    <Button
        android:id="@+id/root_directory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/root_directory"
        android:onClick="doClick"
        />
    <TextView
        android:id="@+id/tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
</LinearLayout>
